--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     </style>
 </head>
 <body>
-    <h1>Bem vindo faça <a href="login.html">login</a> ou faça <a href="cadastro.html"> login</a> para acessar muitas curiosidades</h1>
+    <h2>Bem vindo faça <a href="login.html">login</a> ou faça <a href="cadastro.html"> cadastre-se</a> para acessar muitas curiosidades</h2>
 </body>
 </html>
