--- a/cadastro.html
+++ b/cadastro.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
@@ -14,7 +15,7 @@
     <main>
         <section>
             <div id="imagem">
-
+                
             </div>
             <div id="formulário">
                 <h1>Cadastro</h1>
