versão mobile e ajustes

--- a/cadastro.html
+++ b/cadastro.html
@@ -13,9 +13,8 @@
         <p>Insira seus dados abaixo:</p>
     </header>
     <main>
-        <section>
-            <div id="imagem">
-                
+        <section id="login">
+            <div id="imagem">            
             </div>
             <div id="formulário">
                 <h1>Cadastro</h1>
