--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Bem-vindo de volta faça login para ter acesso as suas curiosidades que você quer ler de novo ou quer continuar lendo.</h1>
+        <h1>Bem-vindo de volta faça login para ter acesso as suas curiosidades.</h1>
     </header>
     <main>
         <section id="login">
