--- a/cadastro.html
+++ b/cadastro.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Parabens! Você irá criar uma conta para ver curiosidades.</h1>
+        <h1>Parabens! Você irá criar uma cont.</h1>
         <p>Insira seus dados abaixo:</p>
     </header>
     <main>
