--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
         }
         a{
             text-decoration: none;
@@ -15,6 +16,6 @@
     </style>
 </head>
 <body>
-    <h2>Bem vindo faça <a href="login.html">login</a> ou faça <a href="cadastro.html"> cadastre-se</a> para acessar muitas curiosidades</h2>
+    <h3>Bem vindo faça <a href="login.html">login</a> ou faça <a href="cadastro.html"> cadastre-se</a> para acessar muitas curiosidades</h3>
 </body>
 </html>
