--- a/login.html
+++ b/login.html
@@ -1,34 +1,41 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
-    <header>
-        <h1>Bem-vindo de volta faça login para ter acesso as suas curiosidades.</h1>
-    </header>
     <main>
         <section id="login">
             <div id="imagem">
-                
+                <!-- Aqui vai a imagem nas CSS -->
             </div>
-            <h1>Login</h1>
-            <div id="formulário">
-                <h1>Seja bem vindo(a) novamente faça login para continuar</h1>
-                <form action="curiosidades.html" method="post">
-                    <input type="submit" value="Enviar">
-                    <input type="reset" value="Limpar">
+            <div id="formulario">
+                <h1>Login</h1>
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente.</p>
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <i class="material-icons">person</i>
+                        <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
+                        <label for="ilogin">Login</label>
+                    </div>
+                    <div class="campo">
+                        <i class="material-icons">vpn_key</i>
+                        <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html" class="botao">
+                        Esqueci a senha <i class="material-icons">mail</i>
+                    </a>
                 </form>
             </div>
         </section>
     </main>
-    <footer>
-        <p>Site criado por <a href="https://github.com/Breno-Pontes-2014">Breno</a></p>
-    </footer>
 </body>
 </html>
