--- a/cadastro.html
+++ b/cadastro.html
@@ -23,7 +23,7 @@
                     <div class="campo">
                         <i class="material-icons">person</i>
                         <input type="email" name="login" id="ilogin" placeholder="E-mail" autocomplete="email" required maxlength="30">
-                        <label for="ilogin">Login</label>
+                        <label for="ilogin">Cadastro</label>
                     </div>
                     <div class="campo">
                         <i class="material-icons">vpn_key</i>
