--- a/cadastro.html
+++ b/cadastro.html
@@ -19,7 +19,7 @@
             </div>
             <div id="formulário">
                 <h1>Cadastro</h1>
-                <form action="login.php" method="post" autocomplete="on">
+                <form action="curiosidades.html" method="post" autocomplete="on">
                     <div class="campo">
                         <i class="material-icons">person</i>
                         <input type="email" name="login" id="ilogin" placeholder="E-mail" autocomplete="email" required maxlength="30">
