--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <form action="login.php" method="post" autocomplete="on">
+                <form action="curiosidades.html" method="post" autocomplete="on">
                     <div class="campo">
                         <i class="material-icons">person</i>
                         <input type="email" name="login" id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
