--- a/esqueci.html
+++ b/esqueci.html
@@ -19,6 +19,7 @@
         <div>
             <input type="password" name="senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
             <label for="isenha">Senha</label>
+            <input type="submit" value="Enviar">
         </div>
     </form>
 </body>
