--- a/cadastro.html
+++ b/cadastro.html
@@ -31,7 +31,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html" class="botao">
+                    <a href="esqueci2.html" class="botao">
                         Esqueci a senha <i class="material-icons">mail</i>
                     </a>
                 </form>
