--- a/esqueci.html
+++ b/esqueci.html
@@ -15,7 +15,7 @@
 <body>
     <h1>Esqueceu a senha</h1>
     <p>Definir a senha</p>
-    <form action="login.html" method="post">
+    <form action="https://breno-pontes-2014.github.io/Projeto-tela-de-login/" method="post">
         <div>
             <input type="password" name="senha" id="isenha" placeholder="Senha" autocomplete="current-password" required minlength="8" maxlength="20">
             <br>
