--- a/cadastro.html
+++ b/cadastro.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Parabens! Você irá criar uma cont.</h1>
+        <h1>Parabens! Você irá criar uma conta.</h1>
         <p>Insira seus dados abaixo:</p>
     </header>
     <main>
@@ -31,9 +31,6 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html" class="botao">
-                        Esqueci a senha <i class="material-icons">mail</i>
-                    </a>
                 </form>
             </div>
         </section>
