--- a/cadastro.html
+++ b/cadastro.html
@@ -1,23 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Login</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
-    <header>
-        <h1>Parabens! Você irá criar uma conta.</h1>
-        <p>Insira seus dados abaixo:</p>
-    </header>
     <main>
         <section id="login">
-            <div id="imagem">            
+            <div id="imagem">
+                <!-- Aqui vai a imagem nas CSS -->
             </div>
-            <div id="formulário">
+            <div id="formulario">
                 <h1>Cadastro</h1>
                 <form action="curiosidades.html" method="post" autocomplete="on">
                     <div class="campo">
@@ -31,12 +29,10 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
+
                 </form>
             </div>
         </section>
     </main>
-    <footer>
-        <p>Site criado por <a href="https://github.com/Breno-Pontes-2014">Breno</a></p>
-    </footer>
 </body>
 </html>
